--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   line-height: 1.5rem;
   background-color: #333333;
-  color: #D4D3D4;
+  color: #FFFFEE;
 
   @media only screen and (max-width: 400px) {
     font-size: 14px;
