--- a/components/HeroBanner.module.scss
+++ b/components/HeroBanner.module.scss
@@ -3,9 +3,10 @@
   width: 100%;
   height: 100vh;
   background-image: url("/1.we-salute-you.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,7 +16,7 @@
   position: absolute;
   text-align: center;
   width: 100%;
-  top: 50%;
+  top: 20%;
   transform: translateY(-50%);
   color: #fff;
 }
@@ -29,13 +30,13 @@
   padding: 1.5rem;
 
   .title {
-    color: #C2B316;
+    color: #BEBE22;
     padding: 0;
     margin: 0 0 1em 0;
   }
 
   .content {
-    color: #F1EFB3;
+    color: #EEEE22;
     padding: 0;
     margin: 0;
   }
