--- a/components/HeroBanner.module.scss
+++ b/components/HeroBanner.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("/1.we-salute-you.jpg");
+  background-image: url("https://rockschool-ro.imgix.net/1.we-salute-you.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
