--- a/components/Prices.module.scss
+++ b/components/Prices.module.scss
@@ -1,5 +1,5 @@
 .root {
-  background-image: url("/7.empty-stage.jpg");
+  background-image: url("https://rockschool-ro.imgix.net/7.empty-stage.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
