--- a/components/FAQ.module.scss
+++ b/components/FAQ.module.scss
@@ -1,45 +1,21 @@
 .root {
-  background-image: url("/4.closeup-speaker.jpg");
+  background-image: url("https://rockschool-ro.imgix.net/4.closeup-speaker.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
 
-  max-width: 3600px;
+.textContainer {
+  max-width: 1100px;
   margin: 0 auto;
   padding: 1.5rem;
 
   @media only screen and (min-width: 600px) {
-    display: flex;
     padding: 1.5rem 0 1.5rem 1.5rem;
   }
-}
 
-.imageContainer {
-  flex-grow: 0;
-  display: flex;
-  justify-content: space-around;
-
-  @media only screen and (min-width: 900px) {
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-
-  .image {
-    display: block;
-    width: calc(50vw - 1.5rem);
-
-    @media only screen and (min-width: 900px) {
-      width: 300px;
-    }
-  }
-}
-
-.textContainer {
-  flex-grow: 1;
-
-  @media only screen and (min-width: 800px) {
-    margin-right: 500px;
-    margin-left: 10px;
+  h3, p {
+    max-width: 600px;
   }
 }
