--- a/components/Profesori.module.scss
+++ b/components/Profesori.module.scss
@@ -1,48 +1,54 @@
 .root {
-  background-image: url("/5.yellow-spots.jpg");
+  background-image: url("https://rockschool-ro.imgix.net//5.yellow-spots.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  a {
+    margin-left: 5px;
+    color: #BEBE22;
+  }
+
+  h4 {
+    color: #BEBE22;
+  }
 }
 
-* {
-  box-sizing: border-box
+.rootInner {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 1.5rem;
+
+  @media only screen and (min-width: 600px) {
+    padding: 1.5rem 0 1.5rem 1.5rem;
+  }
 }
-body {
-  font-family: "Lato", sans-serif;
+
+.tabsContainer {
+  margin: 40px 0 20px;
 }
-.tab {
-  margin-top: -100px;
+
+.tabsList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
-.tablinks:hover {
-  background: transparent;
-  border: hidden;
-}
-#fontadj2 {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  color: #FFFFEE;
-}
-.tablinks {
-  font-family: 'Roboto';
-  font-weight: 600;
-}
-.tab button {
-  height: 40px;
-  width: 80px;
-  background-color: rgba(104, 102, 102, 0.2);
-  border-radius: 15px 15px 0px 0px;
+
+.tabButton {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  border-radius: 5px 5px 0 0;
+  background-color: #5C5C54;
   color: #BEBE22;
-  font-size: 17px;
-}
-h2 {
-  color: #BEBE22;
-  font-family: 'Roboto';
-  font-weight: 800;
-}
-.tabcontent {
-  display: none;
-  border-top: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin: 0 1px;
+
+  &.selected {
+    background-color: #000;
+  }
 }
