--- a/components/EventsCarousel.module.scss
+++ b/components/EventsCarousel.module.scss
@@ -6,6 +6,11 @@
   padding-bottom: 2rem;
 
   @media screen and (min-width: 500px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  @media screen and (min-width: 1120px) {
     margin-left: -1rem;
     margin-right: -1rem;
   }
