fix: narrow widths top scroll button and custom dots

--- a/components/EventsCarousel.module.scss
+++ b/components/EventsCarousel.module.scss
@@ -38,3 +38,50 @@
     padding: .7rem 0;
   }
 }
+
+.button__bar {
+  display: inline-block;
+  vertical-align: middle;
+  margin: auto;
+  padding: 2px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+}
+
+.button__bar li {
+  list-style: none;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 5px;
+  padding: 0;
+}
+
+.button__bar li button {
+  border: none;
+  background: #bebe22;
+  color: transparent;
+  cursor: pointer;
+  display: block;
+  height: 15px;
+  width: 15px;
+  border-radius: 3.5px;
+}
+
+.button__bar li.slick-active button {
+  background-color: #be5522;
+}
+
+.button__bar li button:hover,
+.button__bar li button:focus {
+  background: #ffff00;
+  outline: 0;
+}
+
+.slick-slide img {
+  border: 5px solid #fff;
+  display: block;
+  margin: auto;
+}
+
