--- a/components/HeroBanner.module.scss
+++ b/components/HeroBanner.module.scss
@@ -25,6 +25,19 @@
   }
 }
 
+.eventContainer {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 15%;
+  transform: translateY(55%);
+  color: #FEFE00;
+
+  @media screen and (min-width: 600px) {
+    top: 20%;
+  }
+}
+
 .bottomContainer {
   max-width: 1100px;
   margin: 0 auto;
